code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_1.wast
(assert_invalid
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
  "type mismatch"
)